--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "bcrypt": "^3.0.7",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-cookies": "^2.0.4",
+    "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
+    "mongoose": "^5.8.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve:dev": "cross-env NODE_ENV=development nodemon ./server/index.js",
+    "dev": "parallelshell \"cross-env NODE_ENV=development npm run serve:dev\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-react-app": "^5.1.0",
@@ -41,6 +54,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "nodemon": "^2.0.2",
+    "parallelshell": "^3.0.1",
     "prettier": "^1.19.1"
   }
 }
