--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dev": "parallelshell \"cross-env NODE_ENV=development npm run serve:dev\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed": "node server/seeds/seeder.js"
   },
   "eslintConfig": {
     "extends": "react-app"
