--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "koa-cookies": "^2.0.4",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.8.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
@@ -43,6 +45,7 @@
   "devDependencies": {
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-react-app": "^5.1.0",
